// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem renders correctly 1`] = `
<View
  ref={null}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <RCTText>
    Food : 
  </RCTText>
  <RCTText
    lightGray={true}
  >
    <FormattedNumber
      maximumFractionDigits={1}
      value={60}
    />
     
     kg - 
  </RCTText>
  <RCTText
    lightGray={true}
  >
    60 %
  </RCTText>
</View>
`;

exports[`LegendItem should not render % if percentage is 0 1`] = `
<View
  ref={null}
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <RCTText>
    Food : 
  </RCTText>
  <RCTText
    lightGray={true}
  >
    <FormattedNumber
      maximumFractionDigits={1}
      value={10}
    />
     
     g
  </RCTText>
</View>
`;
